@@ -1,5 +1,17 @@
 2021-12-23  Carlos Garcia Campos  <cgarcia@igalia.com>
 
+        [GTK][a11y] WTR: handle heading level as special case in intValue with ATSPI
+        https://bugs.webkit.org/show_bug.cgi?id=234603
+
+        Reviewed by Adrian Perez de Castro.
+
+        Tests expect intValue to return the heading level.
+
+        * WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:
+        (WTR::AccessibilityUIElement::intValue const):
+
+2021-12-23  Carlos Garcia Campos  <cgarcia@igalia.com>
+
         [GTK][a11y] WTR: handle missing cases in isAttributeSettable with ATSPI
         https://bugs.webkit.org/show_bug.cgi?id=234601
 
